# PJATK-PJC

./: CMakeLists.txt
Core/: Box print.cpp  W2.1 Odwracanie słów.cpp  W2.2 Manipulacja formatem wyświetlania danych.cpp  W3.1 Refactoring przy użyciu lambd i algorytmów.cpp  W3.2 Wzbogacenia biblioteki standardowej.cpp  W4.2 Dzielenie zakresów na części.cpp
Egzamin/: Ćwiczenia.cpp
W1/: W.cpp
W1/Zadania/: W1.1 Migracja kodu Java na C++.cpp  W1.2 Podstawowe operacje na zmiennych tekstowych.cpp  W1.3 Translacja cyfr.cpp  W1.4 Porównanie zachowania między Javą a C++.cpp  W1.5 Sprawdzanie, czy pierwsza wpisana sekwencja jest równa drugiej  .cpp  W1.6 Suma dwóch liczb.cpp
W2/: W.cpp
W2/Zadania/: W2.1 Eliminowanie największej i najmniejszej wartości.cpp  W2.2 Iloczyn skalarny.cpp  W2.3 Iteracja co N elementów.cpp  W2.4 Największe elementy zbioru.cpp  W2.5 Palindromy.cpp  W2.6 Sortowanie wybranej połowy wektora.cpp  W2.7 Usuwanie duplikatów.cpp
W3/: W.cpp
W3/Zadania/: W3.1 Modyfikacje elementów przy pomocy pętli zakresowej.cpp  W3.2 Naturalne sortowanie.cpp  W3.3 Szukanie najdłuższego tekstu.cpp  W3.4 Usuwanie sąsiednich białych znaków.cpp
W4/: Data.txt  W.cpp
W4/Zadania/: W4.1 Generyczne udoskonalenia biblioteki standardowej.cpp  W4.2 Analiza liczb w folderze.cpp  W4.3 Analiza liczb w pliku.cpp  W4.4 Poprawne sudoku.cpp
W4/Zadania/Numbers/: N2.1.txt  N2.2.txt  N3.txt
W5/Zadania/: W5.1 Szukanie cyklu w grafie.cpp  W5.2 Grupowanie po długości tekstu.cpp  W5.3 Analiza grupy studenckiej.cpp  W5.4 Punkty w przestrzeni 2D.cpp
